@@ -1,9 +1,9 @@
 Package: pdftools
 Type: Package
 Title: Text Extraction, Rendering and Converting of PDF Documents
-Version: 1.5.9000
-Author: Jeroen Ooms
-Maintainer: Jeroen Ooms <jeroen@berkeley.edu>
+Version: 1.6.9000
+Authors@R: person("Jeroen", "Ooms", role = c("aut", "cre"), email = "jeroen@berkeley.edu",
+      comment = c(ORCID = "0000-0002-4035-0289"))
 Description: Utilities based on 'libpoppler' for extracting text, fonts, attachments and 
     metadata from a PDF file. Also supports high quality rendering of PDF documents info
     PNG, JPEG, TIFF format, or into raw bitmap vectors for further processing in R.
