@@ -1,4 +1,5 @@
 1.6
+  - pdf_render_page() and pdf_convert() gain argument to control 'antialias'
   - Small tweaks in pdf_text() for dealing with malformed pdf files
 
 1.5
